# Capstone-Delivery-to-Door-Robot

./: README.md  boxer.urdf.xacro  floor4plan.world  floor4plan_transp.world  floor4plan_v2.world  human.world  jackal_world.launch  level4_floor_transp.world  multi_floor_2.py  odom.py
boxer_desktop/: README.md
boxer_desktop/boxer_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
boxer_desktop/boxer_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
boxer_desktop/boxer_viz/launch/: view_model.launch
boxer_desktop/boxer_viz/rviz/: model.rviz  robot.rviz
boxer_simulator/: README.md
boxer_simulator/boxer_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
boxer_simulator/boxer_gazebo/launch/: boxer_floor.launch  boxer_multi_floor.launch  boxer_race.launch  boxer_world.launch  empty_world.launch  spawn_boxer.launch
boxer_simulator/boxer_gazebo/meshes/: boxer_world_rooms.dae  boxer_world_walls.dae
boxer_simulator/boxer_gazebo/scripts/: boxer_base_sim
boxer_simulator/boxer_gazebo/worlds/: bright_empty.world  hotel.world
boxer_simulator/boxer_gazebo/worlds/boxer_world/: rooms.urdf.xacro  walls.urdf.xacro
boxer_simulator/boxer_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
maps_pgm/: level1_map.pgm  level2_map.pgm  level2_map.yaml  level3_map.pgm  level3_map.yaml  level4_map.pgm  level4_map.yaml
maps_pgm_v2/: level1_map.pgm  level1_map.yaml  level2_map.pgm  level2_map.yaml  level3_map.pgm  level4_map.pgm
old_world/: level1_map.pgm  level1_map.yaml  level2
