<?xml version="1.0"?>
<package format="2">
  <name>boxer_viz</name>
  <version>0.1.2</version>
  <description>Visualization launchers and helpers for BOXER.</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>boxer_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
