<?xml version="1.0"?>
<package format="2">
  <name>boxer_gazebo</name>
  <version>0.1.1</version>
  <description>The boxer_gazebo package</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>boxer_control</exec_depend>
  <exec_depend>boxer_description</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
